# class-scheduler

./: .gitignore  readme.md
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  check_connections.py  clean_db.py  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 6e36c99ebd6a_initial_schema.py
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  availability.py  master_data.py  schedules.py
backend/app/bot/: __init__.py  notify.py  polls.py  webhook.py
backend/app/jobs/: __init__.py  scheduler.py
backend/app/scheduler/: solver.py  validator.py  weights.py
backend/app/services/: __init__.py  loader.py  persister.py  scheduling.py
backend/docs/: data-model.md
backend/tests/: conftest.py  test_api.py  test_bot.py  test_health.py  test_jobs.py  test_loader.py  test_schemas.py  test_seed.py  test_solver.py  test_validator.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AutoSchedulerView.tsx  AvailabilityView.tsx  CommandPalette.tsx  DashboardView.tsx  MasterDataView.tsx  NotionGrid.tsx  Sidebar.tsx
