[project]
name = "tuition-scheduler"
version = "0.1.0"
description = "Daily timetable generator for a tuition centre (CP-SAT solver + Telegram bot + FastAPI + Next.js)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "ortools>=9.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10",
    "aiogram>=3.7",
    "greenlet>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "hypothesis>=6.100",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
# asyncio_mode=auto lets `async def test_*` run without a per-test marker.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100
